# fastapi-mock-server

./: .gitignore  README.md  app.py  endpoints.py  pyproject.toml
example_app/: app.py  model.py
source/: app_generator.py  endpoints.py  endpoints_generator.py
source/templates/: endpoints.jinja
