[tool.poetry]
name = "openapimockserver"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.4"
openapi-schema-pydantic = "^1.2.4"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
jinja2 = "^3.1.2"
rich = "^13.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

