[tool.poetry]
name = "fastapi-mock-server"
version = "1.0.0"
description = "Auto-generate a FastAPI-based mock server from an OpenAPI schema"
authors = ["Yannic Schröer <yannic@code-specialist.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.4"
openapi-schema-pydantic = "^1.2.4"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

